fixed ui on mobile

--- a/style.css
+++ b/style.css
@@ -22,11 +22,11 @@ main{
     margin-right: 1.5em;
 }
 
-/* table{
+table{
     border: 1px solid #d2d2d2;
     background: white;
-    border-collapse: collapse;
-} */
+    border-radius: 20px;
+}
 
 th{
     text-align: center;
@@ -37,7 +37,6 @@ td{
     text-align: center;
     vertical-align: middle;
     padding: 1em;
-    border: 1px solid #d2d2d2;
 }
 
 /* classes */
@@ -70,7 +69,7 @@ td{
 }
 
 .card-fixed{
-    width: 300px;
+    width: 15em;
     min-height: 150px;
 }
 
